--- a/package.json
+++ b/package.json
@@ -3,25 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vite build --watch",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "check": "vue-tsc --noEmit",
+    "build": "vite build",
+    "prepublishOnly": "npm run check && npm run build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^7.0.1",
+    "d3-scale": "^4.0.0",
+    "np": "^7.5.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.401",
+    "@types/d3": "^7.0.0",
+    "@types/d3-scale": "^4.0.1",
+    "@types/luxon": "^2.0.4",
+    "@types/resize-observer-browser": "^0.1.6",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "@vitejs/plugin-vue": "^1.6.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.2.11",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vueuse/core": "^6.3.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5"
+    "tslib": "^2.3.1",
+    "ttypescript": "^1.5.12",
+    "typescript": "~4.1.5",
+    "vite": "^2.5.7",
+    "vite-dts": "^1.0.3",
+    "vite-plugin-components": "^0.13.3",
+    "vite-plugin-icons": "^0.6.5",
+    "vue-tsc": "^0.3.0"
   }
 }
