--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vue-cli-service serve",
     "check": "vue-tsc --noEmit",
     "build": "vite build",
+    "webpack:build": "vue-cli-service build",
     "prepublishOnly": "npm run check && npm run build",
     "lint": "vue-cli-service lint"
   },
